--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,34 @@
-img.slide {
+.carousel {
+  display: inline-block;
+  border: 1px solid gray;
+  position: relative;
+}
+
+.carousel img.slide {
   display: none;
 }
 
-img.slide.visible {
+.carousel img.slide.visible {
   display: block;
+}
+
+.carousel button.control {
+  position: absolute;
+  top: 45%;
+  background-color: transparent;
+  border: none;
+}
+
+.carousel button.control.previous {
+  left: 0;
+}
+
+.carousel button.control.next {
+  right: 0;
+}
+
+.carousel img.chevron {
+  opacity: 30%;
+  height: 40px;
+  cursor: pointer;
 }
